# authentication

./: .env_example  README.md  docker-compose.yml
.github/workflows/: ci.yml
api/: .gitignore  .pylintrc  Dockerfile  LICENSE  README.md  main.py  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 31278aa9f620_create_t_sessions_table.py  477d10c8c6ac_create_t_clients_table.py  ad8faff7cb64_create_t_role_assignments_table.py  b71a773c7699_create_t_authentication_codes_table.py  c2e960bf531a_create_t_users_table.py  d3287015cc67_add_createdat_and_updatedat_columns_to_.py  d5f1e7d50c03_create_t_authentication_credentials_.py  edbb6c8f6635_create_t_roles_table.py
api/src/Authentication/Application/: Authenticate.py  ListAllUsers.py  RegisterUser.py
api/src/Authentication/Domain/: Interfaces.py  Models.py  Sevices.py
api/src/Authentication/Infrastructure/: Dependencies.py  Hashing.py  Internal.py
api/src/Authentication/Infrastructure/Database/: Models.py  SqlRepositories.py
api/src/Authentication/Infrastructure/Http/: Controller.py  Routes.py
api/src/Session/Application/: CreateSession.py  ValidateSession.py
api/src/Session/Domain/: Interfaces.py  Models.py  Services.py
api/src/Session/Infrastructure/: Dependencies.py
api/src/Session/Infrastructure/Database/: Models.py  SqlRepositories.py
api/src/Session/Infrastructure/Http/: Controller.py  Routes.py
api/src/Shared/: Enums.py  Models.py
api/src/Shared/Config/: AppConfig.py
api/src/Shared/DependencyInjection/: Container.py
api/src/Shared/Events/: Models.py
api/src/Shared/Logging/: Interfaces.py  Models.py
api/tests/unit/Authentication/Application/: test_ListAllUsers.py  test_RegisterUser.py
api/tests/unit/Authentication/Domain/: test_Models.py
api/tests/unit/Shared/Config/: test_AppConfig.py
api/tests/unit/Shared/DependencyInjection/: test_Container.py
api/tests/unit/Shared/Events/: test_Models.py
api/tests/unit/Shared/Logging/: test_Models.py
docs/: TechnicalDesign.md
