[project]
name = "authentication-api"
version = "0.1.0"
description = "API for authentication using OAuth2 and OpenID Connect"
authors = [
    { name = "Jomar Júnior de Souza Pereira", email = "jomarjunior@poli.ufrj.br" },
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "pytest (>=8.4.1,<9.0.0)",
    "pylint (>=3.3.8,<4.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "alembic (>=1.16.5,<2.0.0)",
]

[tool.black]
line-length = 100
target-version = ['py39']

[tool.pytest.ini_options]
addopts = "--maxfail=5 --disable-warnings -q"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["api"]
