[project]
name = "authentication-api"
version = "0.1.0"
description = "API for authentication using OAuth2 and OpenID Connect"
authors = [
    { name = "Jomar Júnior de Souza Pereira", email = "jomarjunior@poli.ufrj.br" },
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "email-validator (>=2.3.0,<3.0.0)",
    "bcrypt (>=4.3.0,<5.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
]

[tool.black]
line-length = 100
target-version = ['py39']

[tool.pytest.ini_options]
addopts = "--maxfail=5 --disable-warnings -q"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["api"]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pylint = "^3.3.8"
black = "^25.1.0"
alembic = "^1.16.5"
